# asiacrypt-2025-submission

./: .gitmodules  README.md
arkworks-algebra/: CHANGELOG.md
arkworks-algebra/bench-templates/src/macros/: field.rs
arkworks-algebra/ec/src/: lib.rs
arkworks-algebra/ec/src/scalar_mul/: fixed_base.rs  mod.rs
arkworks-algebra/ff/: Cargo.toml
arkworks-algebra/ff/src/biginteger/: mod.rs
arkworks-algebra/ff/src/fields/: prime.rs
arkworks-algebra/ff/src/fields/models/fp/: mod.rs  montgomery_backend.rs
arkworks-algebra/serialize/src/: impls.rs
arkworks-algebra/test-curves/: Cargo.toml
arkworks-algebra/test-curves/benches/: bn254.rs  small_mul.rs
arkworks-algebra/test-curves/src/: lib.rs
arkworks-algebra/test-curves/src/bn254/: fq.rs  fr.rs  g1.rs  mod.rs  test.rs
smallfield-super-sumcheck/: .gitignore  Cargo.toml
smallfield-super-sumcheck/benches/: binius_tower_field.rs  btf_sumcheck.rs  btf_sumcheck_with_eq.rs  btf_sumcheck_with_eq_thresh.rs  helper.rs
smallfield-super-sumcheck/scripts/: find_optimal_round_t_d2.sh  find_optimal_round_t_d3.sh  prover_alt_mem_d2.sh  prover_alt_mem_d3.sh  prover_testing.sh
smallfield-super-sumcheck/src/: btf_transcript.rs  data_structures.rs  eq_poly.rs  error.rs  extension_transcript.rs  lib.rs  prover.rs  verifier.rs
smallfield-super-sumcheck/src/algorithms/: four.rs  four_eq.rs  one.rs  one_eq.rs  three.rs  three_eq.rs  two.rs  two_eq.rs
smallfield-super-sumcheck/src/tests/: btf_sumcheck.rs  mod.rs  simple_tests.rs
smallfield-super-sumcheck/src/tower_fields/: binius.rs  mod.rs
